Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -14,8 +14,22 @@ This Walkthrough covers the three approaches although it offers further details 
 The diagram below shows the scenario for the containerized eShop legacy applications.
 ![image](https://user-images.githubusercontent.com/1712635/30395628-9c4bff98-987b-11e7-82ca-89a1648f3bdc.png)
 
--------------------------------------
--------------------------------------
+## Prerequisites
+- Windows 10 (For the developer machine)
+- [Docker for Windows (Docker CE for Windows)](https://store.docker.com/editions/community/docker-ce-desktop-windows)
+- Visual Studio 2017 (VS 15.3.3 or later)
+
+## How to containerize your existing .NET applications with Visual Studio
+
+Before you run the solution, you must make sure that you configure Docker to use Windows Containers. To do that, you right-click the Docker taskbar icon in Windows and select **Switch to Windows Containers**, as shown in the figure below.
+
+![image](https://user-images.githubusercontent.com/1712635/30396197-b9d4e0be-987d-11e7-9e76-e982ab184e54.png)
+
+If the menu item says "Switch to Linux containers", you are already running Docker with Windows Containers.
+
+----------------------------------------------
+--- Older simplified procedure - TO BE REMOVED
+----------------------------------------------
 
 ## How to: dockerize the app
 1. Add Docker files to the project:
