Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -19,13 +19,17 @@ The diagram below shows the scenario for the containerized eShop legacy applicat
 - [Docker for Windows (Docker CE for Windows)](https://store.docker.com/editions/community/docker-ce-desktop-windows)
 - Visual Studio 2017 (VS 15.3.3 or later)
 
-## How to containerize your existing .NET applications with Visual Studio
+## Containerizing your existing .NET applications with Visual Studio
 
+### Configuring Docker for Windows to use Windows Containers instead of Linux Containers
 Before you run the solution, you must make sure that you configure Docker to use Windows Containers. To do that, you right-click the Docker taskbar icon in Windows and select **Switch to Windows Containers**, as shown in the figure below.
 
 ![image](https://user-images.githubusercontent.com/1712635/30396197-b9d4e0be-987d-11e7-9e76-e982ab184e54.png)
 
 If the menu item says "Switch to Linux containers", you are already running Docker with Windows Containers.
+
+### Using Visual Studio to add Docker support to the application
+Visual Studio 2017 provides great support for containerizing an application. You right-click the project node and then select Add and Docker Support. The Docker project template adds a new project to the solution called docker-compose. The project contains the Docker assets (simple .yml metadata files) that compose the Docker images you need, as shown in Figure X-X. 
 
 ----------------------------------------------
 --- Older simplified procedure - TO BE REMOVED
