--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -29,7 +29,29 @@ Before you run the solution, you must make sure that you configure Docker to use
 If the menu item says "Switch to Linux containers", you are already running Docker with Windows Containers.
 
 ### Using Visual Studio to add Docker support to the application
-Visual Studio 2017 provides great support for containerizing an application. You right-click the project node and then select Add and Docker Support. The Docker project template adds a new project to the solution called docker-compose. The project contains the Docker assets (simple .yml metadata files) that compose the Docker images you need, as shown in Figure X-X. 
+Visual Studio 2017 provides great support for containerizing an application. You right-click the project node and then select **Add** and **Docker Support**. The Docker project template adds a new project to the solution called **docker-compose**. The project contains the Docker assets (simple .yml metadata files) that compose the Docker images and containers' startup settings you need, as shown in the figure below. 
+
+![image](https://user-images.githubusercontent.com/1712635/30396480-99d5cf20-987e-11e7-984d-4ddf5244f516.png)
+
+Then, in the next figure you can see how your project and solution has been modified with the Docker metadata.
+
+![image](https://user-images.githubusercontent.com/1712635/30396518-bfafaae0-987e-11e7-8473-9cd08d32d80d.png)
+
+In the simplest monolithic scenarios like this one, the application will be the single application service/container defined at the docker-compose.yml file that you will need to deploy. In other more complex scenarios like N-Tier applications, you will have a multi-container application defined in the docker-compose.yml file.
+The template also changes your startup project to point to the docker-compose project so it will run on Docker when launching the solution. 
+Pressing Ctrl+F5 or F5 now compiles the .NET application bits, creates the Docker image and launches the Docker container all in a single step for you, as shown in the next image.
+
+![image](https://user-images.githubusercontent.com/1712635/30396561-e2fe2044-987e-11e7-9742-3f6a48c3ddde.png)
+
+When VS is building the Docker image, the first time you do this, it takes considerable time (a few minutes). This is because the build process pulls down the base Windows Server Core image and the additional image for ASP.NET. Subsequent build and run cycles will be much faster.
+Let’s take a deeper look at the files added by the Docker project template. It created several files for you. Visual Studio uses these files to create the Docker image and launch a container. You can use the same files from the CLI to run Docker commands manually with the Docker CLI commands like “docker run” and “docker-compose up”.
+For each application or service in your solution Visual Studio adds a dockerfile to your project’s root folder, similar to the following Dockerfile example showing the basic settings for building a Docker image based on the Windows ASP.NET image that runs an ASP.NET site.
+
+`FROM microsoft/aspnet
+ARG source
+WORKDIR /inetpub/wwwroot
+COPY ${source:-obj/Docker/publish} .`
+
 
 ----------------------------------------------
 --- Older simplified procedure - TO BE REMOVED
