--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -47,13 +47,33 @@ When VS is building the Docker image, the first time you do this, it takes consi
 Let’s take a deeper look at the files added by the Docker project template. It created several files for you. Visual Studio uses these files to create the Docker image and launch a container. You can use the same files from the CLI to run Docker commands manually with the Docker CLI commands like “docker run” and “docker-compose up”.
 For each application or service in your solution Visual Studio adds a dockerfile to your project’s root folder, similar to the following Dockerfile example showing the basic settings for building a Docker image based on the Windows ASP.NET image that runs an ASP.NET site.
 
-`FROM microsoft/aspnet  
+Sample Dockerfile:
 
-ARG source  
+**FROM microsoft/aspnet  **
 
-WORKDIR /inetpub/wwwroot  
+**ARG source  **
 
-COPY ${source:-obj/Docker/publish} .  `
+**WORKDIR /inetpub/wwwroot  **
+
+**COPY ${source:-obj/Docker/publish} . ** 
+
+If your application were based on an older version of .NET Framework, like .NET Framework 3.5, you could use a similar base image directive like the following.
+
+`FROM microsoft/dotnet-framework:3.5`
+
+This previous Dockerfile will look very similar to those created for running an ASP.NET Core application in Linux containers. However, there are a few important differences. The most important difference is that the base image is microsoft/aspnet, which is an image based on Windows Server Core image that includes IIS, the .NET Framework and special optimizations for ASP.NET.
+The other files in the docker-compose project are the Docker assets needed to build and configure the containers. 
+Visual Studio puts the various docker-compose.yml files under one node (project) to highlight how they are used. The base docker-compose file contains the directives that are common to all configurations/environments. The docker-compose.override.yml file contains environment variables and related overrides for a by-default developer configuration. 
+
+### Building Docker images and running in Docker with the Docker CLI
+
+While Visual Studio integration is part of adding Docker support to your solution, annd just by running the dockerized application with VS you are already creating the Docker images and deploying the containers in Docker, all in a single step ("F5 experience"), you can also containerize your application by manually adding the dockerfile and docker-compose files to your solution and then building the Docker images with the “docker build” CLI command and finally running the application from the command line, using the “docker-compose up” command or the “docker run command” as you can explorer in other Docker guidance like the “[Containerized Docker Application Lifecycle with Microsoft Platform and Tools](https://aka.ms/dockerlifecycleebook)” eBook.
+
+In order to generate your application's .NET bits, you can do so from VS and the menu option "Publish", then with the option "to folder" as used in [this other Wiki procedure](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)). 
+
+As an alternative option, in order to build the .NET bits from the CLI or from a CI pipeline, you need a build container or Docker build agent that will be internally using MSBuild to compile your .NET code. You can explore this walkthrough on "[How to create a custom image for a .NET Framework build container internally using MSBuild](https://github.com/docker/labs/tree/master/dockercon-us-2017/windows-modernize-aspnet-dev)". 
+
+Once you produced the .NET bits of your application, ready for you, in a directory, you’d build the Docker images with the CLI command “docker image build”, also explained in the same article/walkthrough.
 
 
 ----------------------------------------------
