Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -49,13 +49,10 @@ For each application or service in your solution Visual Studio adds a dockerfile
 
 Sample Dockerfile:
 
-**FROM microsoft/aspnet  **
-
-**ARG source  **
-
-**WORKDIR /inetpub/wwwroot  **
-
-**COPY ${source:-obj/Docker/publish} . ** 
+    `FROM microsoft/aspnet  
+    ARG source  
+    WORKDIR /inetpub/wwwroot  
+    COPY ${source:-obj/Docker/publish} . `
 
 If your application were based on an older version of .NET Framework, like .NET Framework 3.5, you could use a similar base image directive like the following.
 
