--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -62,7 +62,22 @@ This previous Dockerfile will look very similar to those created for running an 
 The other files in the docker-compose project are the Docker assets needed to build and configure the containers. 
 Visual Studio puts the various docker-compose.yml files under one node (project) to highlight how they are used. The base docker-compose file contains the directives that are common to all configurations/environments. The docker-compose.override.yml file contains environment variables and related overrides for a by-default developer configuration. 
 
-### Building Docker images and running in Docker with the Docker CLI
+### Development and production environments
+
+There are a couple of differences between the development configuration and a production configuration. In the development environment, you run the ASP.NET application and SQL Server in Windows Containers, within the same Docker host. In earlier sections, we mentioned that for development environments you could use a SQL localdb within the same application Windows Container or deploying an independent SQL Server Windows Container. 
+
+The advantage of running the database along with the multiple application containers within the same Docker host (or even orchestrator cluster looking forward) is that you have a very predictable testing environment with a consistent database that can have the same pre-generated data generated when deploying to the testing environment in the Docker host. 
+In the development environment, you usually run all the containers in the same environment, including the SQL databases, so it’ll be easier while developing and testing. 
+
+In a production environment, you can decide if you want to run the application Windows Container in a single Docker host Azure VM, or in an orchestrator’s cluster like Service Fabric, and most of all, you will usually have the data stored in a high-available and production ready SQL environment like Azure SQL Database or Azure SQL Database Managed Instance. 
+
+Additional resources 
+- Lab: Modernize .NET Apps - for Ops
+    https://github.com/docker/labs/tree/master/dockercon-us-2017/windows-modernize-aspnet-ops
+- Lab: Modernize .NET Apps - for Devs
+    https://github.com/docker/labs/tree/master/dockercon-us-2017/windows-modernize-aspnet-dev
+
+## Containerizing your existing .NET applications with the Docker CLI and manually adding dockerfiles
 
 While Visual Studio integration is part of adding Docker support to your solution, annd just by running the dockerized application with VS you are already creating the Docker images and deploying the containers in Docker, all in a single step ("F5 experience"), you can also containerize your application by manually adding the dockerfile and docker-compose files to your solution and then building the Docker images with the “docker build” CLI command and finally running the application from the command line, using the “docker-compose up” command or the “docker run command” as you can explorer in other Docker guidance like the “[Containerized Docker Application Lifecycle with Microsoft Platform and Tools](https://aka.ms/dockerlifecycleebook)” eBook.
 
@@ -71,6 +86,7 @@ In order to generate your application's .NET bits, you can do so from VS and the
 As an alternative option, in order to build the .NET bits from the CLI or from a CI pipeline, you need a build container or Docker build agent that will be internally using MSBuild to compile your .NET code. You can explore this walkthrough on "[How to create a custom image for a .NET Framework build container internally using MSBuild](https://github.com/docker/labs/tree/master/dockercon-us-2017/windows-modernize-aspnet-dev)". 
 
 Once you produced the .NET bits of your application, ready for you, in a directory, you’d build the Docker images with the CLI command “docker image build”, also explained in the same article/walkthrough.
+
 
 
 ----------------------------------------------
