Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -87,6 +87,38 @@ As an alternative option, in order to build the .NET bits from the CLI or from a
 
 Once you produced the .NET bits of your application, ready for you, in a directory, you’d build the Docker images with the CLI command “docker image build”, also explained in the same article/walkthrough.
 
+## Containerizing your existing .NET applications with Image2Docker
+
+Another way to migrate existing .NET application from Windows VM running IIS towards Windows Containers, without using a developer tool like Visual Studio, is to use [Image2Docker](https://www.powershellgallery.com/packages/Image2Docker/), an open-source tool originally created and provided by Docker (the company).
+
+In this case you don’t even need to see the code or open any solution like when using Visual Studio and it has the advantage of having a tool that explores existing installation and configuration in Windows and will generate the dockerfile config for that specific configuration.
+
+### What is Image2Docker?
+
+[Image2Docker](https://www.powershellgallery.com/packages/Image2Docker/) is basically a PowerShell module that migrates existing Windows application from VMs to Windows Container images. Although it supports multiple application types, the main focus is on IIS. You can use Image2Docker to export ASP.NET websites from a VM, so you can run them in a Windows Container with no application changes. 
+
+Requirements for Image2Docker:
+
+- Windows Server 2016 
+- Windows 10 with Docker for Windows installed
+- PowerShell 5.0, or later
+
+### How does Image2Docker work?
+
+Image2Docker first inspects the artifacts in a Windows Server VM image. This original VM could be a Windows Server 2003, 2008, 2012 or 2016 and its VM format could be WIM, VHD or VHDX. 
+
+Image2Docker will extract either an entire VM or specific components from a VHD file. Next, it will generate a Dockerfile which you can build into a Windows Container image. 
+
+For instance, if you have a VM disk image (VHD, VHDX or WIM), you can extract all the IIS websites from it by installing Image2Docker and running ConvertTo-Dockerfile like this:
+
+    `Install-Module Image2Docker
+    Import-Module Image2Docker
+    ConvertTo-Dockerfile -ImagePath C:\my-windows-2016.vhd -Artifact IIS -OutputPath c:\docker\W216iis`
+
+
+
+
+
 
 
 ----------------------------------------------
