Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -115,8 +115,41 @@ For instance, if you have a VM disk image (VHD, VHDX or WIM), you can extract al
     Import-Module Image2Docker
     ConvertTo-Dockerfile -ImagePath C:\my-windows-2016.vhd -Artifact IIS -OutputPath c:\docker\W216iis`
 
+That will produce a Dockerfile which you can use to build a Windows container image, using docker build.
 
+Image2Docker, as of mid-2017, currently supports discovery of the following Windows artifacts:
 
+- Microsoft Windows Server Roles and Features
+- Microsoft Windows Add/Remove Programs (ARP)
+- Microsoft Windows Server Domain Name Server (DNS)
+- Microsoft Windows Internet Information Services (IIS)
+- HTTP Handlers in IIS configuration
+- IIS Websites and filesystem paths
+- ASP.NET web applications
+- Microsoft SQL Server instances
+- Apache Web Server
+
+Additional resources for Image2Docker
+- Image2Docker PowerShell Module
+    https://www.powershellgallery.com/packages/Image2Docker/ 
+- Image2Docker official repo maintained by Docker
+    https://github.com/docker/communitytools-image2docker-win 
+- Convert ASP.NET Web Servers to Docker with Image2docker
+    https://blog.docker.com/2016/12/convert-asp-net-web-servers-docker-image2docker/ 
+- Working with Windows Containers and Docker: Into your Stride
+    https://www.red-gate.com/simple-talk/sysadmin/virtualization/working-windows-containers-docker-stride/
+
+## Installing custom dependencies within your Windows Containers
+
+In many cases, your existing .NET applications are not based just on your .NET code solution and the .NET Framework libraries but also based on additional artifacts from Windows that have to be enabled (IIS, .NET WCF HTTP Activation, Server roles, etc.) and even additional components from third parties that you need to install in windows through .MSI setups. You can perform those steps in a declarative way within the declared commands within your dockerfiles.
+
+### Installing MSIs in Docker images
+In order to install an MSI within a Windows Container you just need to copy in the .msi file and run msiexec to install it. For instance, the following dockerfile specifies how to install a .msi in your container.
+
+    `# escape=`
+    FROM microsoft/aspnet:windowsservercore
+    COPY MySetupSample-1.0.0.0.msi /
+    RUN msiexec /i c:\ MySetupSample-1.0.0.0.msi RELEASENAME=2017.01 /qn `
 
 
 
