Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -151,8 +151,34 @@ In order to install an MSI within a Windows Container you just need to copy in t
     COPY MySetupSample-1.0.0.0.msi /
     RUN msiexec /i c:\ MySetupSample-1.0.0.0.msi RELEASENAME=2017.01 /qn `
 
+There are just three lines of Dockerfile instructions:
 
+- FROM specifies the base image to use, in this case a specific version of the ASP.NET image using Windows Server Core.
+- COPY copies the existing MSI from the local machine into the Docker image
+- RUN installs the MSI using msiexec, with the qn switch to install silently, and passing a value to the custom RELEASENAME variable that the MSI uses.
 
+That .msi setup could install whatever dependency you might need for your application, like the .DLLS of a PDF creator library (or any other comparable case) that you might need to use from your ASP.NET application.
+
+You can also, of course, add these steps to your previous dockerfile so you may end up with multiple COPY commands (your application plus additional .MSIs) and therefore you could also execute multiple RUN commands from your dockerfile.
+
+### Enabling Windows features in Docker images
+
+In order to enable Windows features or artifacts (like .NET WCF HTTP Activation, IIS configuration, etc.) in a Windows Container, you need to specify those dependencies in your dockerfile so they will be installed when the container is deployed.
+
+For instance, the following dockerfile would enable .NET WCF HTTP Activation in your Windows Container:
+
+    `# Base image is Windows Server Core image since WCF does not need ASP.NET
+    FROM microsoft/windowsservercore
+    
+    RUN powershell -Command Add-WindowsFeature NET-WCF-HTTP-Activation45
+    
+    # Creates a directory for the Host
+    WORKDIR app
+    # Listen on port 88.
+    EXPOSE 88
+    # Copy the WCF host into the container.
+    COPY Bin/ .
+    ENTRYPOINT BasicHttpHost.exe`
 
 ----------------------------------------------
 --- Older simplified procedure - TO BE REMOVED
