Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -180,6 +180,37 @@ For instance, the following dockerfile would enable .NET WCF HTTP Activation in 
     COPY Bin/ .
     ENTRYPOINT BasicHttpHost.exe`
 
+The important line in that dockerfile is the line with the RUN command that specifies to add certain Windows Feature, in this case, .NET WCF HTTP Activation.
+Note that not all the Windows features can be activated in Windows Containers since some of them are not supported, like MSMQ or other cases.
+
+Other supported cases for Windows Containers can be the following: 
+- Like ISAPI handler in IIS. 
+- A .PDF creation service program installed with a .MSI. 
+- Office Automation.
+- ASP.NET Controls.
+- IIS enable and configured.
+- WCF HTTP Activation – Program – Windows Settings (Kind of IIS activation)
+- List of dockerfiles with many dependencies and settings being configured. 
+- Have .NET 3.5 in the Docker image.
+
+Additional resources:
+
+- WCF Self-Hosted Services in a Container
+    https://blogs.msdn.microsoft.com/webdev/2017/02/20/lets-try-wcf-self-hosted-services-in-a-container/
+- How to: Install and Configure WCF Activation Components
+    https://docs.microsoft.com/en-us/dotnet/framework/wcf/feature-details/how-to-install-and-configure-wcf-activation-components
+
+
+## How to create Windows Container images with your infrastructure dependencies (Database Server, Messaging Server, etc.)
+TBD:
+- Chocolatey for creating Windows Containers images for infrastructure assets (DBs, RabbitMQ, etc.)
+
+... CONTENT TO BE DEFINED ...
+
+
+
+
+
 ----------------------------------------------
 --- Older simplified procedure - TO BE REMOVED
 ----------------------------------------------
