Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -77,6 +77,10 @@ Additional resources
 - Lab: Modernize .NET Apps - for Devs
     https://github.com/docker/labs/tree/master/dockercon-us-2017/windows-modernize-aspnet-dev
 
+*** Optional finish of the walkthrough ***
+At this point you already containerized the application.
+The next sections focus on alternative approaches and more advanced scenarios you might need and you can also explore. 
+
 ## Containerizing your existing .NET applications with the Docker CLI and manually adding dockerfiles
 
 While Visual Studio integration is part of adding Docker support to your solution, annd just by running the dockerized application with VS you are already creating the Docker images and deploying the containers in Docker, all in a single step ("F5 experience"), you can also containerize your application by manually adding the dockerfile and docker-compose files to your solution and then building the Docker images with the “docker build” CLI command and finally running the application from the command line, using the “docker-compose up” command or the “docker run command” as you can explorer in other Docker guidance like the “[Containerized Docker Application Lifecycle with Microsoft Platform and Tools](https://aka.ms/dockerlifecycleebook)” eBook.
