Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -1,8 +1,9 @@
 ##  Overview
-In this walkthrough, TBD
+Deploying Windows Containers to Azure VM will improve agility in your multiple staging environment because of the ready-to-run environments in Azure.
+Although Windows Containers can be deployed into Windows VMs (Docker Hosts on Windows) either on-premises or in the cloud, like Azure, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server VMs for containers plus automatic scalability of VMs through Azure scale-sets.
 
 ##  Goals for this walkthrough
-TBD
+This walkthrough shows you the multiple alternative you can have in order to dpeloy Windows Containers to Azure VMs based on Windows Server 2016 or later.
 
 ##  Scenario
 TBD
