Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -5,8 +5,14 @@ Although Windows Containers can be deployed into Windows VMs (Docker Hosts on Wi
 ##  Goals for this walkthrough
 This walkthrough shows you the multiple alternative you can have in order to dpeloy Windows Containers to Azure VMs based on Windows Server 2016 or later.
 
-##  Scenario
-TBD
+##  Scenarios
+There are several scenarios. The following diagrams show you each of them to be detailed in the page.
+
+SCENARIO A: 
+
+SCENARIO B:
+
+SCENARIO C:
 
 ## Prerequisites
 - TBD
