Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -9,6 +9,7 @@ This walkthrough shows you the multiple alternative you can have in order to dpe
 There are several scenarios. The following diagrams show you each of them to be detailed in the page.
 
 SCENARIO A: 
+![image](https://user-images.githubusercontent.com/1712635/30400808-faffa13c-988c-11e7-97e4-5b3467a903a5.png)
 
 SCENARIO B:
 
