--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -8,13 +8,13 @@ This walkthrough shows you the multiple alternative you can have in order to dpe
 ##  Scenarios
 There are several scenarios. The following diagrams show you each of them to be detailed in the page.
 
-SCENARIO A: 
+**SCENARIO A: **
 ![image](https://user-images.githubusercontent.com/1712635/30400808-faffa13c-988c-11e7-97e4-5b3467a903a5.png)
 
-SCENARIO B:
+**SCENARIO B:**
 ![image](https://user-images.githubusercontent.com/1712635/30401504-620aca58-988f-11e7-8791-201cbafaa6db.png)
 
-SCENARIO C:
+**SCENARIO C:**
 
 ## Prerequisites
 - TBD
