Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -1,9 +1,8 @@
 ##  Overview
-Deploying Windows Containers to Azure VM will improve agility in your multiple staging environment because of the ready-to-run environments in Azure.
-Although Windows Containers can be deployed into Windows VMs (Docker Hosts on Windows) either on-premises or in the cloud, like Azure, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server VMs for containers plus automatic scalability of VMs through Azure scale-sets.
+Deploying Windows Containers to Azure VM will improve agility in your multiple staging environment because of the ready-to-run environments in Azure. Although Windows Containers can be deployed into Windows VMs (Docker Hosts on Windows Server 2016 or later) either on-premises or in the cloud, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server VMs “container-ready” plus automatic scalability of VMs through Azure scale-sets.
 
 ##  Goals for this walkthrough
-This walkthrough shows you the multiple alternative you can have in order to dpeloy Windows Containers to Azure VMs based on Windows Server 2016 or later.
+This walkthrough shows you the multiple alternatives you can have when deploying Windows Containers to Azure VMs based on Windows Server 2016 or later.
 
 ##  Scenarios
 There are several scenarios. The following diagrams show you each of them to be detailed in the page.
@@ -15,10 +14,11 @@ There are several scenarios. The following diagrams show you each of them to be 
 ![image](https://user-images.githubusercontent.com/1712635/30402804-d62632a2-9893-11e7-817a-f9f616cdf380.png)
 
 **SCENARIO C:**
-![image](https://user-images.githubusercontent.com/1712635/30402922-36453aa2-9894-11e7-8161-774ea5a5a8ec.png)
+![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
 
 ## Prerequisites
-- TBD
+- A Microsoft Azure subscription
+
 
 ## Deploying from VSTS CD pipeline to Azure VM 
 - TBD (Plain)
