Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -5,7 +5,7 @@ Deploying Windows Containers to Azure VM will improve agility in your multiple s
 This walkthrough shows you the multiple alternatives you can have when deploying Windows Containers to Azure VMs based on Windows Server 2016 or later.
 
 ##  Scenarios
-There are several scenarios. The following diagrams show you each of them to be detailed in the page.
+There are several scenarios. The following diagrams show you each of them to be detailed in this page.
 
 **SCENARIO A:**
 ![image](https://user-images.githubusercontent.com/1712635/30402751-b976ac40-9893-11e7-9666-de94de842d31.png)
