Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -1,5 +1,5 @@
 ##  Overview
-Deploying Windows Containers to Azure VM will improve agility in your multiple staging environment because of the ready-to-run environments in Azure. Although Windows Containers can be deployed into Windows VMs (Docker Hosts on Windows Server 2016 or later) either on-premises or in the cloud, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server VMs “container-ready” plus automatic scalability of VMs through Azure scale-sets.
+Deploying to a Docker host on a Windows Server 2016 VM in Azure allows you to have quick dev/test/staging environments where you can run your applications in a common place for testers or business users validating the app. VMs can also be valid for IaaS production environments.
 
 ##  Goals for this walkthrough
 This walkthrough shows you the multiple alternatives you can have when deploying Windows Containers to Azure VMs based on Windows Server 2016 or later.
@@ -18,6 +18,15 @@ There are several scenarios. The following diagrams show you each of them to be 
 
 ## Prerequisites
 - A Microsoft Azure subscription
+- Dev machine with Windows 10, Docker for Windows and Visual Studio 2017
+
+
+## Benefits when using Azure VM for Windows Containers Docker host
+Although Windows Containers can be deployed into on-premises Windows Server 2016 VMs, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server Container VMs, a common place in the Internet accessible for testers plus automatic scalability of VMs through Azure scale-sets.
+
+
+
+
 
 
 ## Deploying from VSTS CD pipeline to Azure VM 
