Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -4,6 +4,10 @@ Deploying to a Docker host on a Windows Server 2016 VM in Azure allows you to ha
 ##  Goals for this walkthrough
 This walkthrough shows you the multiple alternatives you can have when deploying Windows Containers to Azure VMs based on Windows Server 2016 or later.
 
+## Introduction to Azure VMs for Windows Containers
+Virtual Machines for Windows containers are simply VMs based on Windows Server 2016, Windows 10, or later versions, both with Docker engine setup. Usually, you will use Windows Server2016 in the Azure VMs.
+**Azure currently provides a VM named “Windows Server 2016 with Containers”** which allows you to try the new Windows Server Container feature with both Windows Server Core and Windows Nano Server Container OS Images installed and ready to use with Docker.
+
 ##  Scenarios
 There are several scenarios. The following diagrams show you each of them to be detailed in this page.
 
@@ -17,12 +21,21 @@ There are several scenarios. The following diagrams show you each of them to be 
 ![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
 
 ## Prerequisites
-- A Microsoft Azure subscription
+- A Microsoft Azure subscription. If you don't have one, sign up for a free trial [here](https://azure.microsoft.com/en-us/free/).
 - Dev machine with Windows 10, Docker for Windows and Visual Studio 2017
-
 
 ## Benefits when using Azure VM for Windows Containers Docker host
 Although Windows Containers can be deployed into on-premises Windows Server 2016 VMs, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server Container VMs, a common place in the Internet accessible for testers plus automatic scalability of VMs through Azure scale-sets.
+
+## Creating a Windows Server 2016 VM in Azure 
+
+As mentioned, before starting the walkthrough, you will need an Azure subscription account. If you don’t already have one, sign up for a free 30-day trial here.
+
+### Deploy the Virtual Machine in Azure
+First of all, log in to the Azure management portal. Then, click on the “+ New” menu option and then search for **“Windows Server 2016 Datacenter - with Containers”** and select that VM type, as shown in the image below.
+
+
+
 
 
 
