Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -27,16 +27,45 @@ There are several scenarios. The following diagrams show you each of them to be 
 ## Benefits when using Azure VM for Windows Containers Docker host
 Although Windows Containers can be deployed into on-premises Windows Server 2016 VMs, however, when deploying into Azure you get a much easier way to get started with ready-to-use Windows Server Container VMs, a common place in the Internet accessible for testers plus automatic scalability of VMs through Azure scale-sets.
 
-## Creating a Windows Server 2016 VM in Azure 
+## Deploying a Windows Server 2016 VM in Azure (for Windows Containers)
 
 As mentioned, before starting the walkthrough, you will need an Azure subscription account. If you don’t already have one, sign up for a free 30-day trial here.
 
 ### Deploy the Virtual Machine in Azure
 First of all, log in to the Azure management portal. Then, click on the “+ New” menu option and then search for **“Windows Server 2016 Datacenter - with Containers”** and select that VM type, as shown in the image below.
 
+![image](https://user-images.githubusercontent.com/1712635/30406957-3215bc20-98aa-11e7-8602-5cdae6f7e523.png)
 
+On the Windows Server 2016 Datacenter – with Containers panel, make sure that Resource Manager is selected in the Select a Deployment Model drop-down menu. Then, click on the “Create” button, as specified in the next image.
 
+![image](https://user-images.githubusercontent.com/1712635/30406974-5238cc04-98aa-11e7-9bdb-0a3be3a9e0af.png)
 
+Then, you will see a panel with the VM settings that you need to select or write as shown in the following screenshot.
+
+![image](https://user-images.githubusercontent.com/1712635/30406999-6d125cc0-98aa-11e7-8681-a6c90a77d6a9.png)
+
+On the Create Virtual Machine panel and within the Basics tab, provide a name for the server, a username for the VM’s administrator account in the User field, type and confirm a password for the account, and finally in the Resource Group field, make sure that Create new is checked, and type a name for the new Resource Group.
+
+Change the Datacenter Location using the drop-down menu, if needed. Finally, hit OK.
+
+In the Choose a size panel set a size for the new VM and hit Select. 
+
+![image](https://user-images.githubusercontent.com/1712635/30407011-8a275db0-98aa-11e7-9b49-8300f1a43464.png)
+
+In the Settings panel, under Storage, set Use Managed Disks to Yes. 
+You will also need to create a new Virtual Network (or select an existing one), as in the next image.
+
+![image](https://user-images.githubusercontent.com/1712635/30407029-ab66a8d2-98aa-11e7-8e5a-c1ced1834745.png)
+
+Then, click on OK at the bottom of the Settings panel and finally hit the OK button of the Summary panel to deploy the VM.
+The deployment will take a few minutes.
+
+### Connect to the Windows Server 2016 VM using RDP
+Once the VM is deployed, you can enter into its configuration panel in Azure portal. Follow the following steps once you are in the VM configuration panel.
+
+- In the Virtual Machine panel, click Connect to open an RDP session to the VM.
+- Save the RDP file to your PC and open it by double-clicking on it.
+- Click Connect in the Remote Desktop Connection dialog box, as shown in image X-XX.
 
 
 
