Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -65,7 +65,17 @@ Once the VM is deployed, you can enter into its configuration panel in Azure por
 
 - In the Virtual Machine panel, click Connect to open an RDP session to the VM.
 - Save the RDP file to your PC and open it by double-clicking on it.
-- Click Connect in the Remote Desktop Connection dialog box, as shown in image X-XX.
+- Click Connect in the Remote Desktop Connection dialog box, as shown in the next image.
+
+    ![image](https://user-images.githubusercontent.com/1712635/30407087-13c69e14-98ab-11e7-991d-b19198602e74.png)
+
+- In the Remote Desktop Connection dialog, check Don’t ask me again for connections to this computer. Then click Connect.
+- Enter the admin username and password for the VM in the Windows Security dialog box and click OK, as shown in the next image.
+
+    ![image](https://user-images.githubusercontent.com/1712635/30407156-6d860890-98ab-11e7-9083-8fd33209efcd.png)
+
+- If prompted again, in the Remote Desktop Connection dialog, check Don’t ask me again for connections to this computer. Then click Yes.
+- At this point you should be able to see the desktop of the VM and work with it remotely.
 
 
 
