Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -77,9 +77,30 @@ Once the VM is deployed, you can enter into its configuration panel in Azure por
 - If prompted again, in the Remote Desktop Connection dialog, check Don’t ask me again for connections to this computer. Then click Yes.
 - At this point you should be able to see the desktop of the VM and work with it remotely.
 
+### Check Docker engine status for Windows Containers in the VM
+This Windows Server 2016 VM is basically a Windows Container Host with Docker Engine running to manage the Windows Containers.
+Open a PowerShell console in the Windows Server 2016 by typing “Windows PowerShell” on the start menu.
+Type “docker images” to see the already available pre-installed Windows Containers images in the VM. You can see you will have the Windows Server Core and the Windows Nano Server images. You could have downloaded/pulled from Docker Hub, but having them pre-installed in the “Windows Server 2016 Datacenter - with Containers” Azure VM will save you significant time.
 
+![image](https://user-images.githubusercontent.com/1712635/30407204-bc6f1a28-98ab-11e7-90c4-1c4f780a0cbe.png)
 
+## Deploying your containers to the Windows Server based Azure VM
 
+You can deploy containers to Docker hosts in multiple ways. Some ways are better suited for development environments and other ways fit better under production environments. 
+
+### Deploying containers to an Azure VM from a development machine (PC) thorugh Docker engine
+
+In this case, you would have an Azure VM based on Windows Server 2016 but you would deploy to it from a development machine with “Docker for Windows” or “Docker for Mac” by using the regular “docker-compose build”, “docker-compose up” and “docker run” commands, but redirected to the VM as Docker Host in the cloud instead of deploying locally into the local development machine with Docker.
+
+The difference in this case, compared to the “Production environment”, is that you are building the Docker images and creating them in the local image repository at the VM right before deploying the containers into the same VM. You are not using any Docker/Container registry in between.
+
+This is the Scenario A introduced right at the beginning of the page:
+
+![image](https://user-images.githubusercontent.com/1712635/30402751-b976ac40-9893-11e7-9666-de94de842d31.png)
+
+#### Setting up the Docker Server for remote connections through Docker CLI
+
+TBD
 
 ## Deploying from VSTS CD pipeline to Azure VM 
 - TBD (Plain)
