Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -94,13 +94,31 @@ In this case, you would have an Azure VM based on Windows Server 2016 but you wo
 
 The difference in this case, compared to the “Production environment”, is that you are building the Docker images and creating them in the local image repository at the VM right before deploying the containers into the same VM. You are not using any Docker/Container registry in between.
 
-This is the Scenario A introduced right at the beginning of the page:
+This is the **Scenario A** introduced right at the beginning of the page:
 
 ![image](https://user-images.githubusercontent.com/1712635/30402751-b976ac40-9893-11e7-9666-de94de842d31.png)
 
 #### Setting up the Docker Server for remote connections through Docker CLI
 
-TBD
+##### Allow remote TCP connection to Docker engine
+
+By default, the Docker Server will only listen on a Named Pipe connection, which cannot be accessed remotely. However, you can add additional listeners very easily.
+
+Perform the following steps in the server (VM) you deployed in Azure:
+
+1. Edit C:\ProgramData\docker\config\daemon.json. If it does not exist, just create the text file.
+2. Add or modify the hosts setting and append tcp://0.0.0.0:2375, like in the following JSON snippet.
+
+    `{
+    "hosts": ["tcp://0.0.0.0:2375","npipe://"]
+    }`
+
+3. Save the file and restart the Docker Service with the command “Restart-Service Docker” from the PowerShell in the server VM.
+
+This configuration will listen for all IP addresses on port 2375 (Default Docker port). However, for real production environments you could also set only specific IP addresses for security reasons.
+
+
+
 
 ## Deploying from VSTS CD pipeline to Azure VM 
 - TBD (Plain)
