--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -117,6 +117,53 @@ Perform the following steps in the server (VM) you deployed in Azure:
 
 This configuration will listen for all IP addresses on port 2375 (Default Docker port). However, for real production environments you could also set only specific IP addresses for security reasons.
 
+##### Create NSG rules allowing inbound traffic
+A network security group (NSG) contains a list of security rules that allow or deny network traffic to resources connected to Azure Virtual Networks (VNet). You’ll need to create a rule to allow traffic for remote management of your Windows Docker Host.
+Make port docker's TLS ports 2375 and 2376 available by creating an NSG rule allowing inbound traffic. Note that for secure connections you only need to allow 2376.
+The portal should show an NSG configuration for your VM like the following:
+
+![image](https://user-images.githubusercontent.com/1712635/30407430-06383b20-98ad-11e7-8c17-085b7411bfb2.png)
+
+#### Open the Docker port in the Windows Firewall at the Windows Server VM
+
+In addition, you need to open the port used by Docker in the Windows Firewall, either by manually creating a rule of by running this PowerShell command:
+
+    `PS C:\> netsh advfirewall firewall add rule name="Docker Engine Remote Management" dir=in action=allow protocol=TCP localport=2375-2376`
+
+Or alternatively, using with this other PowerShell command:
+
+    `PS C:\> New-NetFirewallRule -DisplayName 'Docker Engine Remote Management' -Profile @('Domain', 'Public', 'Private') -Direction Inbound -Action Allow -Protocol TCP -LocalPort 2375-2376`
+
+Note that if you also open the 2375 port you’ll be opening a door to anyone, so you might want to open just the secure port and use the certificates for a secure connection.
+
+**IMPORTANT:** You will need to create a similar NSG rule for the HTTP ports that your application uses. In this case, the eShopModernizingMVC app uses the **5114 port**.
+
+#### Create the certificates in the server (Optional but recommended)
+
+If you want to connect securely from the client development machine, you will need to create the certs on the server using [dockertls](https://hub.docker.com/r/stefanscherer/dockertls-windows/). If you're creating the certs with an IP address, you may want to consider a static IP to avoid having to recreate certs when the IP address changes.
+
+Restart the docker service with the ”`Restart-Service Docker`” command from the command prompt.
+
+At this point, remote clients should be able to connect remotely to the Docker server if using the required certificates.
+
+For more information on configuring the Docker Server on Windows check this [documentaion on Windows Containers](https://docs.microsoft.com/en-us/virtualization/windowscontainers/manage-docker/configure-docker-daemon).
+
+Additional resources 
+- Configuring Docker Engine on Windows Server 2016
+https://docs.microsoft.com/en-us/virtualization/windowscontainers/manage-docker/configure-docker-daemon
+- Generating Certificates without using openSSL in plain PowerShell
+https://artisticcheese.wordpress.com/2017/06/10/using-pure-powershell-to-generate-tls-certificates-for-docker-daemon-running-on-windows/
+- Container Host Deployment - Windows Server
+https://docs.microsoft.com/en-us/virtualization/windowscontainers/deploy-containers/deploy-containers-on-server
+- Considerations for running Docker for Windows Server 2016 with Hyper-V VMs
+https://blog.docker.com/2016/10/considerations-running-docker-windows-server-2016-hyper-v-vms/
+
+### Remotely connecting and deploying containers to an Azure VM from a development machine environment
+
+You don’t need to use the Docker client CLI on the same host as the Docker server, the Docker CLI also runs over a network (TCP) connection.
+By using this method, you will connect to the Docker host (Windows Containers VM you just set up) from a development machine that has to have Docker Client installed. Usually, you will install “Docker for Windows” or “Docker for Mac” in the development machines, so that you have Docker Client installed. Then, you can use Docker CLI.
+
+
 
 
 
