Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -88,7 +88,7 @@ Type “docker images” to see the already available pre-installed Windows Cont
 
 You can deploy containers to Docker hosts in multiple ways. Some ways are better suited for development environments and other ways fit better under production environments. 
 
-### Deploying containers to an Azure VM from a development machine (PC) thorugh Docker engine
+### Scenario A: Deploying containers to an Azure VM from a development machine (PC) through Docker engine
 
 In this case, you would have an Azure VM based on Windows Server 2016 but you would deploy to it from a development machine with “Docker for Windows” or “Docker for Mac” by using the regular “docker-compose build”, “docker-compose up” and “docker run” commands, but redirected to the VM as Docker Host in the cloud instead of deploying locally into the local development machine with Docker.
 
@@ -158,12 +158,30 @@ https://docs.microsoft.com/en-us/virtualization/windowscontainers/deploy-contain
 - Considerations for running Docker for Windows Server 2016 with Hyper-V VMs
 https://blog.docker.com/2016/10/considerations-running-docker-windows-server-2016-hyper-v-vms/
 
-### Remotely connecting and deploying containers to an Azure VM from a development machine environment
+#### Remotely connecting and deploying containers into the Azure VM from a development machine
 
 You don’t need to use the Docker client CLI on the same host as the Docker server, the Docker CLI also runs over a network (TCP) connection.
+
 By using this method, you will connect to the Docker host (Windows Containers VM you just set up) from a development machine that has to have Docker Client installed. Usually, you will install “Docker for Windows” or “Docker for Mac” in the development machines, so that you have Docker Client installed. Then, you can use Docker CLI.
 
+##### Copy the client certs into your dev machine for a secure connection (Optional but recommended)
 
+If you want to connect securely to your VM in Azure, you need to your PC or dev machine.
+Copy the files ca.pem, 'cert.pem' and 'key.pem' from your user's docker folder on your VM where you generated the certs, e.g. c:\users\cesardl\.docker to you local machine. For example, you can ctrl-c, ctrl-v the files from an RDP session.
+
+##### Setting up the Docker Client for remote connections
+
+You can specify a remote Docker Server when using the Docker Client in two ways:
+
+A. Use the -H or --host command line parameter
+B. Set the DOCKER_HOST environment variable
+
+For example, to connect to a remote Docker Server at IP Address 13.91.40.155 on the default 23751 port, run the following commands.
+
+    `PS C:\> docker --host tcp://13.91.44.143:2375 info 
+    or
+    PS C:\> $ENV:DOCKER_HOST = 'tcp://13.91.44.143:2375'
+    PS C:\> docker info`
 
 
 
