Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -183,7 +183,15 @@ For example, to connect to a remote Docker Server at IP Address 13.91.40.155 on 
     PS C:\> $ENV:DOCKER_HOST = 'tcp://13.91.44.143:2375'
     PS C:\> docker info`
 
+For instance, the following commands are run from a Windows 10 dev machine which is configured to remotely access the Windows Server VM in Azure we created previously.
 
+![image](https://user-images.githubusercontent.com/1712635/30407695-a16a706c-98ae-11e7-81df-caeb2b05e421.png)
+
+If your VM is set up with a DNS name in Azure, you could also run the same commands against the DNS name in Azure of your VM, like this command.
+
+    `PS C:\> $ENV:DOCKER_HOST = 'tcp://windockerhost.westus.cloudapp.azure.com:2375'
+    PS C:\> docker info
+    `
 
 ## Deploying from VSTS CD pipeline to Azure VM 
 - TBD (Plain)
